# hello_matter

./: README.md  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  app_priv.h  idf_component.yml
main/devices/: device_driver.h  led_param.cpp  led_param.h  status_led.cpp  status_led.h
main/devices/light/: analog_led_lamp.cpp  analog_led_lamp.h  device_driver.cpp
main/devices/temp_sensor/: device_driver.cpp  shtc3.cpp
main/devices/template/: device_driver.cpp
main/utils/: qr_code_utils.cpp  qr_code_utils.h
